--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header__container container">
-      <a href="#" class="header__logo">
+      <a href="./#home" class="header__logo">
           Electro-Sense
       </a>
 
@@ -14,14 +14,14 @@
           </button>
 
           <ul class="header__list">
-              <li class="header__item"><a href="#" class="header__link">Главная</a></li>
-              <li class="header__item"><a href="#technology" class="header__link">Технологии</a></li>
-              <li class="header__item"><a href="#learning" class="header__link">Обучение</a></li>
-              <li class="header__item"><a href="#opportunities" class="header__link">Перспективы</a></li>
-              <li class="header__item"><a href="#reviews" class="header__link">Отзывы</a></li>
-              <li class="header__item"><a href="#faq" class="header__link">FAQ</a></li>
+              <li class="header__item"><a href="./#home" class="header__link">Главная</a></li>
+              <li class="header__item"><a href="./#technology" class="header__link">Технологии</a></li>
+              <li class="header__item"><a href="./#learning" class="header__link">Обучение</a></li>
+              <li class="header__item"><a href="./#opportunities" class="header__link">Перспективы</a></li>
+              <li class="header__item"><a href="./#reviews" class="header__link">Отзывы</a></li>
+              <li class="header__item"><a href="./#faq" class="header__link">FAQ</a></li>
           </ul>
-          <a href="#contact" class="header__cta btn">Связаться</a>
+          <a href="./#contact" class="header__cta btn">Связаться</a>
       </nav>
   </div>
 </header>
