--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
       <div class="footer__grid">
 
           <div class="footer__col">
-              <a href="#" class="footer__logo">Electro-Sense</a>
+              <a href="./#home" class="footer__logo">Electro-Sense</a>
               <p class="footer__desc">
                   Платформа года, открывающая доступ к знаниям.
                   Технология нового поколения для вашего развития.
@@ -25,23 +25,23 @@
           <div class="footer__col">
               <h3 class="footer__title">Навигация</h3>
               <ul class="footer__list">
-                  <li><a href="#" class="footer__link">Главная</a></li>
-                  <li><a href="#technology" class="footer__link">О Технологии</a></li>
-                  <li><a href="#learning" class="footer__link">Быстрый старт</a></li>
-                  <li><a href="#opportunities" class="footer__link">Возможности</a></li>
-                  <li><a href="#contact" class="footer__link">Поддержка</a></li>
+                  <li><a href="./#home" class="footer__link">Главная</a></li>
+                  <li><a href="./#technology" class="footer__link">О Технологии</a></li>
+                  <li><a href="./#learning" class="footer__link">Быстрый старт</a></li>
+                  <li><a href="./#opportunities" class="footer__link">Возможности</a></li>
+                  <li><a href="./#contact" class="footer__link">Поддержка</a></li>
               </ul>
           </div>
 
           <div class="footer__col">
               <h3 class="footer__title">Информация</h3>
               <ul class="footer__list">
-                  <li><a href="privacy.html" class="footer__link">Политика конфиденциальности</a></li>
-                  <li><a href="cookies.html" class="footer__link">Политика Cookies</a></li>
-                  <li><a href="terms.html" class="footer__link">Условия использования</a></li>
-                  <li><a href="return.html" class="footer__link">Политика возврата</a></li>
-                  <li><a href="disclaimer.html" class="footer__link">Отказ от ответственности</a></li>
-                  <li><a href="personal-data-policy.html" class="footer__link">Обработка персональных данных</a></li>
+                  <li><a href="./privacy.html" class="footer__link">Политика конфиденциальности</a></li>
+                  <li><a href="./cookies.html" class="footer__link">Политика Cookies</a></li>
+                  <li><a href="./terms.html" class="footer__link">Условия использования</a></li>
+                  <li><a href="./return.html" class="footer__link">Политика возврата</a></li>
+                  <li><a href="./disclaimer.html" class="footer__link">Отказ от ответственности</a></li>
+                  <li><a href="./personal-data-policy.html" class="footer__link">Обработка персональных данных</a></li>
               </ul>
           </div>
       </div>
